fix url wrapping

--- a/modules/ginas/app/assets/ginas/css/ginas.css
+++ b/modules/ginas/app/assets/ginas/css/ginas.css
@@ -941,3 +941,7 @@ sketcher svg > text {
 .mol-data-import {
     padding: 40px;
 }
+
+.url{
+word-wrap: break-word;
+}
